CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.8.2-dev

CruiseControl Release Notes - 2.8.1

binary release:
----------------------
* Set jetty.logs to get CCDIR/logs. This prevents a Jetty error when you run CC from a somewhere other than CCDIR and the logs directory doesn't exist in the local directory.

documentation
----------------------
* Add more explaination to ldapmapper (CC-870). Patch by Florian Rosenauer
* Add missing docs for command-line options log4jconfig, jettyxml, agentutil. Reported by David Williams
* Clairfiy that cclastgoodbuildtimestamp and cclastbuildtimestamp are only available if there has been a prior build (CC-193). Reported by Clifton McLellan

build loop
======================

AntBuilder
----------------------
* Fix issue where loggers didn't run under JDK 1.4. Reported by David Williams

ExecBuilder
----------------------
* Fix bug where setting errorStr would prevent output from showing up in build log. Reported by Florian Rosenauer

XcodeBuilder
----------------------
* Add a new plugin for building projects in Apple's Xcode IDE.

reporting jsp app
======================

cruisecontrol.css
----------------------
* Fix width of the selection controls in the menu
* Fix problem in IE where content was shifted off screen to the right (CC-869). Patch by Florian Rosenauer

navigation.jsp
----------------------
* Fix problem with width of the status messages by putting them in a text area


CruiseControl Release Notes - 2.8

general
======================
* End of support for compiling/running CruiseControl with JDK 1.4. New earliest supported JDK is 1.5/5.0.
* Update JSP reporting application to Servlet API 2.5 and JSP API 2.1
* Update Jetty to 6.1.11
* Extracted out the utility class ServerNameSingleton to avoid mulitple slow calls to get the host name.
* Add -log4jconfig command line property to specify URL (for example: "file:/c:/mylog4j.xml") to log4j configuration file.